Added sample limiting, wich increase performance at cost of precision

--- a/index.html
+++ b/index.html
@@ -22,6 +22,10 @@
         </div>
         <div class="panel">
 
+          <label for="inferencePercentage">Inference Percentage (More is slower but more precise)</label>
+          <input type="range" id="inferencePercentage" min="0" max="100" step="1" value="10">
+          <button id="resetInferencePercentage">Reset Inference Percentage</button>
+
         <canvas id="chart"></canvas>
 
 
