--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <link rel="icon" type="image/svg+xml" href="/vite.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" href="src/style.css">
-    <title>Vite App</title>
+    <title>Mnist Detection</title>
   </head>
   <body>
     <div id="app"></div>
@@ -14,7 +14,7 @@
 
     <div class="container">
       <div id="training">
-        <h3>Traning...</h3>
+        <h3>Downloading and processing the dataset...</h3>
       </div>
       <div class="row" id="trained">
         <div class="panel">
