--- a/index.html
+++ b/index.html
@@ -18,7 +18,12 @@
       </div>
       <div class="row" id="trained">
         <div class="panel">
-          <canvas id="canvas"></canvas>
+          <canvas id="canvas" class="canvas"></canvas>
+          <div style="margin-bottom: 10px;"></div>
+          <button id="clear">Clear</button>
+        </div>
+        <div class="panel">
+          <canvas id="canvas2" class="canvas-small"></canvas>
         </div>
         <div class="panel">
 
