small style changes

--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
           <div style="margin-bottom: 10px;"></div>
           <button id="clear">Clear</button>
         </div>
-        <div class="panel">
+        <div class="panel panel-small">
           <canvas id="canvas2" class="canvas-small"></canvas>
         </div>
         <div class="panel">
